--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,6 +2,7 @@
   --bg-color: #18181a;
   --text-color: #fff;
   --subtext-color: #b6b6b6;
+  --hover-color: #666;
 }
 
 * {
